fixed about.js spacing

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,5 @@
 #aboutmain {
-    height: 110vh;
+    height: 120vh;
     background-image: linear-gradient(to top left,  rgb(207, 3, 3) 5%, rgb(66, 20, 20));
     color: white;
     background-color: transparent;
@@ -24,13 +24,13 @@
 .abouttitledescr {
     padding-top: 10px;
     font-style: italic;
-    padding-bottom: 50px;
 }
 .timelinecontainer {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    height: 75%;
 }
 .timelineleft {
     display: flex;
