--- a/src/css/landingcovers.css
+++ b/src/css/landingcovers.css
@@ -42,7 +42,7 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 110vh;
+    height: 120vh;
     width: 100%;
     position: sticky;
     top: 0;
